[BUGFIX] Textareas too wide
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/lfeditor/trunk@54762 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/mod1/tx_lfeditor_mod1.css
+++ b/mod1/tx_lfeditor_mod1.css
@@ -151,7 +151,7 @@ fieldset.tx-lfeditor-fieldset fieldset dd {
 }
 
 .tx-lfeditor-textarea {
-	width: 100%;
+	width: 420px;
 }
 
 .tx-lfeditor-fieldset #metaType {
